add login and endpoint admin
