# app/serializers/admin_serializer.rb
@@ -1,0 +1,8 @@
+class AdminSerializer < ActiveModel::Serializer
+  attributes :id,
+             :name,
+             :user,
+             :created_at,
+             :updated_at
+
+end
