# swagger/v1/swagger.yaml
@@ -4,6 +4,55 @@ info:
   title: API V1
   version: v1
 paths:
+  "/admins":
+    get:
+      summary: Lista de administradores
+      tags:
+      - Admin
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Lista de administradores
+          headers:
+            Per-page:
+              type: integer
+              description: Total de elementos por página
+            Total:
+              type: integer
+              description: Total de elementos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/admin"
+  "/admins/{id}":
+    get:
+      summary: Detalle del administrador
+      tags:
+      - Admin
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Admin encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/admin"
+        '404':
+          description: Admin no encontrado
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
   "/adopters":
     get:
       summary: Lista de adoptantes
@@ -275,6 +324,40 @@ paths:
                     adopter_id:
                       type: integer
                       description: id del adoptante
+  "/logins":
+    post:
+      summary: Login
+      tags:
+      - Login
+      parameters: []
+      responses:
+        '200':
+          description: Autenticación correcta
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token_type:
+                    type: string
+                  access_token:
+                    type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: Correo Electrónico
+                password:
+                  type: string
+                  format: password
+                  description: Contraseña
+              required:
+              - email
+              - password
   "/pets":
     get:
       summary: Lista de perros
@@ -696,3 +779,48 @@ components:
           "$ref": "#/components/schemas/adopter"
       required:
       - id
+    admin:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: ID
+        name:
+          type: string
+          description: Nombre del Administrador
+        user:
+          type: string
+          description: Nick del Administrador
+        created_at:
+          type: string
+          format: date-time
+          description: Fecha de creación
+        updated_at:
+          type: string
+          format: date-time
+          description: Fecha de actualización
+      required:
+      - id
+    not_found:
+      type: object
+      properties:
+        status:
+          type: string
+          description: Estado
+        message:
+          type: string
+          description: Mensaje o descripción
+    unprocessable_entity:
+      type: object
+      properties:
+        status:
+          type: string
+          description: Estado
+        message:
+          type: string
+          description: Mensaje o descripción
+        errors:
+          type: array
+          description: Mensajes de error
+          items:
+            type: string
